manifests/03-apisix/ingressss-annotations-10000/4210-10.yaml
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04210-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04210-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04211-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04211-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04212-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04212-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04213-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04213-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04214-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04214-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04215-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04215-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04216-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04216-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04217-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04217-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04218-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04218-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
---
# Source: ingressss/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 04219-ingressss-annotations-10000
  labels:
    helm.sh/chart: ingressss-0.1.0
    app.kubernetes.io/name: ingressss
    app.kubernetes.io/instance: ingressss-annotations-10000
    app.kubernetes.io/version: "0.1.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    k8s.apisix.apache.org/blocklist-source-range: 172.17.0.0/16
    k8s.apisix.apache.org/cors-allow-methods: GET,POST
    k8s.apisix.apache.org/http-block-method: PUT,DELETE
    k8s.apisix.apache.org/response-rewrite-body-base64: "true"
spec:
  ingressClassName: apisix
  rules:
    - host: "04219-hello.apisix-lab.wmars.party"
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: echo-server
                port:
                  number: 80
